--- a/F6-resume-02-2016/scss/_settings.scss
+++ b/F6-resume-02-2016/scss/_settings.scss
@@ -68,6 +68,7 @@ $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
+$ultra-white: #FFFFFF;
 $white: #ECF0F1;
 $body-background: $white;
 $body-font-color: $black;
