--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -112,7 +112,7 @@ section {
 				background-color: $white;
 			}
 			.hollow{
-				width: rem-calc(200);
+				min-width: rem-calc(250);
 				border: 2px solid $white;
 				color: $white;
 				&:hover{
