--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -39,6 +39,10 @@ nav{
 		text-align: center;
 		color: $white;
 		font-size: rem-calc(21);
+		-webkit-transition: all 0.30s ease-in-out;
+	  -moz-transition: all 0.30s ease-in-out;
+	  -ms-transition: all 0.30s ease-in-out;
+	  -o-transition: all 0.30s ease-in-out;
 		&:hover, &:focus, &:active{
 			background-color: $white;
 			color: $ka-5;
@@ -55,7 +59,7 @@ section {
 		.hero-content{
 			text-align: center;
 			position: absolute;
-			top: 20%;
+			top: 15%;
 			left: 0;
 			right: 0;
 			width: 50%;
