--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -296,7 +296,7 @@ section {
 
 footer{
 	background-color: $ka-5;
-	padding: rem-calc(15) 0;
+	padding: rem-calc(15) 0 0 0;
 	div{
 		color: $white;
 		max-width: $global-width;
@@ -340,6 +340,10 @@ footer{
 	  background-color: $ka-5;
 	  opacity: 1;
 	  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+	}
+	.cr{
+		padding-top: rem-calc(10);
+		text-align: center;
 	}
 }
 
