--- a/F6-resume-02-2016/css/app.css
+++ b/F6-resume-02-2016/css/app.css
@@ -544,9 +544,6 @@
 .long-delay {
   animation-delay: 700ms !important; }
 
-.strong {
-  font-weight: 700; }
-
 .fsz10 {
   font-size: 0.625rem; }
 
@@ -2036,6 +2033,15 @@
 .pr30 {
   padding-right: 1.875rem; }
 
+::-moz-selection {
+  background-color: #BEF6A8; }
+
+::selection {
+  background-color: #BEF6A8; }
+
+.strong {
+  font-weight: 700; }
+
 nav {
   background-color: #3E606F !important;
   border: 1px solid #3E606F;
@@ -2054,10 +2060,10 @@ nav {
     text-align: center;
     color: #ECF0F1;
     font-size: 1.3125rem;
-    -webkit-transition: all 0.30s ease-in-out;
-    -moz-transition: all 0.30s ease-in-out;
-    -ms-transition: all 0.30s ease-in-out;
-    -o-transition: all 0.30s ease-in-out; }
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out; }
     nav a:hover, nav a:focus, nav a:active {
       background-color: #ECF0F1;
       color: #193441; }
@@ -2175,11 +2181,25 @@ section.tools {
     opacity: 0.76;
     z-index: -1; }
 
-section.portfolio img {
-  opacity: 0.5;
-  transition: all 0.5s; }
-  section.portfolio img:hover {
-    opacity: 1; }
+section.portfolio {
+  margin-bottom: 1.0625rem; }
+  section.portfolio img {
+    opacity: 0.5;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1); }
+    section.portfolio img:hover {
+      opacity: 1;
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      transform: scale(1.1); }
 
 section.contact {
   background-color: #91AA9D;
@@ -2188,25 +2208,30 @@ section.contact {
     text-align: center; }
   section.contact p {
     margin-top: 0.9375rem;
-    font-size: 1.125rem; }
+    font-size: 1.1875rem; }
   section.contact form {
     max-width: 77.5rem;
     margin-right: auto !important;
     margin-left: auto !important; }
     section.contact form label {
-      color: #FCFFF5 !important; }
+      color: #FCFFF5 !important;
+      font-size: 0.9375rem; }
     section.contact form ::-webkit-input-placeholder {
-      color: #3E606F !important; }
+      color: #3E606F !important;
+      opacity: 0.7; }
     section.contact form :-moz-placeholder {
       color: #3E606F !important;
-      opacity: 1; }
+      opacity: 0.7; }
     section.contact form ::-moz-placeholder {
       color: #3E606F !important;
-      opacity: 1; }
+      opacity: 0.7; }
     section.contact form :-ms-input-placeholder {
-      color: #3E606F !important; }
+      color: #3E606F !important;
+      opacity: 0.7; }
     section.contact form :placeholder-shown {
-      color: #3E606F !important; }
+      color: #3E606F !important;
+      opacity: 0.7;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
     section.contact form .form-error {
       background-color: rgba(255, 255, 255, 0.6);
       padding: 0.625rem 0 0.625rem 0.5rem;
@@ -2228,10 +2253,10 @@ section.contact {
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-    -webkit-transition: all 0.30s ease-in-out;
-    -moz-transition: all 0.30s ease-in-out;
-    -ms-transition: all 0.30s ease-in-out;
-    -o-transition: all 0.30s ease-in-out; }
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out; }
     section.contact input:focus, section.contact textarea:focus {
       background-color: #FFFFFF;
       outline: none !important;
@@ -2281,7 +2306,27 @@ footer {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25); }
   footer .cr {
     padding-top: 0.625rem;
-    text-align: center; }
+    text-align: center;
+    color: #3E606F; }
+  footer ul {
+    list-style-type: none; }
+    footer ul li {
+      padding: 0.9375rem;
+      display: block;
+      text-align: center; }
+      footer ul li a {
+        color: #ECF0F1;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+        footer ul li a:hover {
+          color: #3E606F; }
+      footer ul li.q-links {
+        font-size: 1.1875rem;
+        font-weight: bold;
+        font-family: 'montserratsemi_bold', sans-serif; }
 
 @media screen and (width: 64em) and (orientation: landscape) {
   nav {
@@ -2714,7 +2759,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #0a0a0a;
-  background: #ECF0F1;
+  background: #FCFCFC;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -4718,7 +4763,7 @@ legend {
   padding: 1.25rem;
   margin: 1.125rem 0; }
   .fieldset legend {
-    background: #ECF0F1;
+    background: #FCFCFC;
     padding: 0 0.1875rem;
     margin: 0;
     margin-left: -0.1875rem; }
@@ -4994,7 +5039,7 @@ select {
     font-size: 0.9rem;
     float: left; }
     .button-group .button:not(:last-child) {
-      border-right: 1px solid #ECF0F1; }
+      border-right: 1px solid #FCFCFC; }
   .button-group.tiny .button {
     font-size: 0.6rem; }
   .button-group.small .button {
@@ -5175,7 +5220,7 @@ select {
   margin-right: 0.75rem; }
 
 .dropdown-pane {
-  background-color: #ECF0F1;
+  background-color: #FCFCFC;
   border: 1px solid #cacaca;
   border-radius: 0;
   display: block;
@@ -5614,7 +5659,7 @@ body {
 .off-canvas-content,
 .off-canvas-content {
   min-height: 100%;
-  background: #ECF0F1;
+  background: #FCFCFC;
   transition: transform 0.5s ease;
   backface-visibility: hidden;
   z-index: 1;
