--- a/F6-resume-02-2016/scss/_settings.scss
+++ b/F6-resume-02-2016/scss/_settings.scss
@@ -69,8 +69,9 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $ultra-white: #FFFFFF;
+$dirty-white: #FCFCFC;
 $white: #ECF0F1;
-$body-background: $white;
+$body-background: $dirty-white;
 $body-font-color: $black;
 $body-font-family: -apple-system, 'Lato', Helvetica, Arial, sans-serif;
 $body-antialiased: true;
