--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -29,42 +29,13 @@ body {
 	font-weight: 700;
 }
 
-nav{
-	background-color: $ka-4 !important;
-	border: 1px solid $ka-4;
-	border-top: none;
-	-moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
-	-webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
-	box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
-	z-index: 999999;
-	position: fixed;
-	width: 100%;
-	top: 0;
-	left: 0;
-	a{
-		display: block;
-		padding: rem-calc(15);
-		text-align: center;
-		color: $white;
-		font-size: rem-calc(21);
-		-webkit-transition: all 0.3s ease-in-out;
-	  -moz-transition: all 0.3s ease-in-out;
-	  -ms-transition: all 0.3s ease-in-out;
-	  -o-transition: all 0.3s ease-in-out;
-		&:hover, &:focus, &:active{
-			background-color: $white;
-			color: $ka-5;
-		}
-	}
-}
-
 section {
 	h3, h4, h5, h6{
 		font-family: 'montserratregular';
 	}
 	&.hero{
-		margin-top: rem-calc(60);
 		.hero-content{
+			margin: 0 auto;
 			text-align: center;
 			position: absolute;
 			top: 15%;
@@ -86,15 +57,21 @@ section {
 				border: 5px solid $white;
 				padding: rem-calc(15);
 				font:{
-					family:'montserratextra_bold', sans-serif;
+					family:'montserratbold', sans-serif;
 					size: rem-calc(34);
 				}
 				margin: rem-calc(15) 0;
 			}
 			h2{
 				font: {
-					family: 'montserratsemi_bold', sans-serif;
+					family: 'montserratlight', sans-serif;
 					size: rem-calc(28);
+				}
+			}
+			span{
+				font: {
+					family: 'montserratlight', sans-serif;
+					size: rem-calc(42);
 				}
 			}
 				p{
@@ -124,6 +101,7 @@ section {
 				background-color: $white;
 			}
 			.hollow{
+				margin: rem-calc(15) 0;
 				min-width: rem-calc(250);
 				border: 2px solid $white;
 				color: $white;
@@ -335,12 +313,12 @@ footer{
 	// Back to top for Desktop and tablet
 	.cd-top {
 	  display: inline-block;
-	  height: 40px;
-	  width: 40px;
+	  height: rem-calc(48);
+	  width: rem-calc(48);
 	  position: fixed;
-	  bottom: 40px;
-	  right: 10px;
-	  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+	  bottom: rem-calc(40);
+	  right: rem-calc(10);
+	  box-shadow: 0 0 rem-calc(10) rgba(0, 0, 0, 0.05);
 	  // image replacement properties
 	  overflow: hidden;
 	  text-indent: 100%;
@@ -364,12 +342,12 @@ footer{
 	}
 	.cd-top.cd-fade-out {
 	  //if the user keeps scrolling down, the button is out of focus and becomes less visible
-	  opacity: .5;
+	  opacity: .4;
 	}
 	.cd-top:hover, .no-touch .cd-top:hover {
 	  background-color: $ka-5;
 	  opacity: 1;
-	  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+	  box-shadow: 0 0 rem-calc(10) rgba(0, 0, 0, 0.75);
 	}
 	.cr{
 		padding-top: rem-calc(10);
@@ -399,6 +377,27 @@ footer{
 					weight: bold;
 					family: 'montserratsemi_bold', sans-serif;
 				}
+			}
+		}
+	}
+}
+
+@include breakpoint(xxlarge only) {
+	section{
+		&.hero{
+			.hero-content{
+				width: 50%;
+			}
+		}
+	}
+}
+
+@include breakpoint(xlarge only) {
+	section{
+		&.hero{
+			.hero-content{
+				width: 75%;
+				top: 10%;
 			}
 		}
 	}
