--- a/F6-resume-02-2016/scss/app.scss
+++ b/F6-resume-02-2016/scss/app.scss
@@ -4,10 +4,12 @@
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
+@import 'header';
 @import 'styles';
 
 @include foundation-global-styles;
-@include foundation-grid;
+//@include foundation-grid;
+@include foundation-flex-classes;
 @include foundation-flex-grid;
 @include foundation-typography;
 @include foundation-button;
