Changes applying fecolor matrix in css... nice technique

--- a/F6-resume-02-2016/css/app.css
+++ b/F6-resume-02-2016/css/app.css
@@ -2306,6 +2306,13 @@
 .strong {
   font-weight: 700; }
 
+.defs-only {
+  position: absolute;
+  height: 0;
+  width: 0;
+  overflow: none;
+  left: -100%; }
+
 section h3, section h4, section h5, section h6 {
   font-family: 'montserratregular'; }
 
@@ -2459,7 +2466,9 @@ section.tools {
     left: 0;
     margin: auto;
     opacity: 0.76;
-    z-index: -1; }
+    z-index: -1;
+    -webkit-filter: url(#monochrome);
+    filter: url(#monochrome); }
 
 section.portfolio {
   margin-bottom: 1.0625rem; }
