--- a/F6-resume-02-2016/css/app.css
+++ b/F6-resume-02-2016/css/app.css
@@ -613,7 +613,7 @@
       padding: 0.625rem 2.8125rem;
       margin: 0 0.4em 0;
       cursor: pointer;
-      color: #ECF0F1;
+      color: #193441;
       outline: none;
       text-decoration: none;
       -webkit-transition: all 0.3s ease-in-out;
@@ -621,12 +621,12 @@
       -ms-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out; }
       .ha-header nav a:hover, .ha-header nav a:focus, .ha-header nav a:active {
-        background-color: #ECF0F1;
+        background-color: #91AA9D;
         color: #193441; }
       .ha-header nav a:last-child {
         margin-right: 0; }
       .ha-header nav a.active {
-        border-bottom: 3px solid #ECF0F1; }
+        border-bottom: 3px solid #193441; }
   .ha-header nav::before {
     content: '';
     height: 100%; }
@@ -719,8 +719,8 @@
     top: 50%;
     transition: transform 0.5s;
     transform: rotateX(0deg) translateY(-100%);
-    background: #193441;
-    opacity: 0.8; }
+    background: #ECF0F1;
+    opacity: 0.95; }
 
 .ha-header-rotateBack {
   height: 3.875rem;
@@ -2393,7 +2393,7 @@ section.hero #parallax-bg {
   height: 100vh;
   top: 0;
   bottom: 0;
-  background: url("/img/hero-banner.jpg") 50% 0 no-repeat;
+  background: url("../img/hero-banner.jpg") 50% 0 no-repeat;
   background-size: cover;
   opacity: 1; }
 
@@ -2443,8 +2443,7 @@ section.skills ul {
 
 section.education article {
   padding-top: 0.9375rem;
-  padding-bottom: 0.9375rem;
-  border: 1px solid red; }
+  padding-bottom: 0.9375rem; }
   section.education article .logo {
     height: 11.25rem;
     margin-left: auto;
@@ -2478,21 +2477,31 @@ section.portfolio {
   margin-bottom: 1.0625rem; }
   section.portfolio img {
     opacity: 0.5;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%);
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    -moz-transform: scale(1);
-    transform: scale(1); }
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    transform: scale(0.9); }
     section.portfolio img:hover {
       opacity: 1;
-      -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      -moz-transform: scale(1.1);
-      transform: scale(1.1); }
+      -webkit-filter: grayscale(0%);
+      -moz-filter: grayscale(0%);
+      -o-filter: grayscale(0%);
+      -ms-filter: grayscale(0%);
+      filter: grayscale(0%);
+      -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1); }
 
 section.contact {
   background-color: #91AA9D;
@@ -2560,6 +2569,49 @@ section.contact {
   section.contact textarea {
     min-height: 9.375rem; }
 
+.homepage-hero-module {
+  border-right: none;
+  border-left: none;
+  position: relative;
+  -webkit-filter: url(#monochrome);
+  filter: url(#monochrome); }
+
+.video-container {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background: #000; }
+  .video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%; }
+  .video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0; }
+    .video-container video.fillWidth {
+      width: 100%; }
+  .video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute; }
+
+.no-video .video-container video {
+  display: none; }
+
+.no-video .video-container .poster {
+  display: block !important; }
+
+.touch .video-container video {
+  display: none; }
+
+.touch .video-container .poster {
+  display: block !important; }
+
 footer {
   background-color: #193441;
   padding: 0.9375rem 0 0 0; }
@@ -2578,7 +2630,7 @@ footer {
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    background: rgba(25, 52, 65, 0.8) url(/img/cd-top-arrow.svg) no-repeat center 50%;
+    background: rgba(25, 52, 65, 0.8) url("../img/cd-top-arrow.svg") no-repeat center 50%;
     visibility: hidden;
     opacity: 0;
     -webkit-transition: opacity .3s 0s, visibility 0s .3s;
