--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -141,7 +141,7 @@ section {
 		  height: 100vh;
 		  top: 0;
 		  bottom: 0;
-		  background: url('/img/hero-banner.jpg') 50% 0 no-repeat;
+		  background: url('../img/hero-banner.jpg') 50% 0 no-repeat;
 		  background-size: cover;
 		  opacity: 1;
 		}
@@ -204,7 +204,6 @@ section {
 		article{
 			padding-top: rem-calc(15);
 			padding-bottom: rem-calc(15);
-			border: 1px solid red;
 			.logo{
 				//text-align: center;
 				height: rem-calc(180);
@@ -244,21 +243,31 @@ section {
 		margin-bottom: rem-calc(17);
 		img{
 			opacity: 0.5;
+			-webkit-filter: grayscale(100%);
+			-moz-filter: grayscale(100%);
+			-o-filter: grayscale(100%);
+			-ms-filter: grayscale(100%);
+			filter: grayscale(100%);
 			-webkit-transition: all 0.3s ease-in-out;
 		  -moz-transition: all 0.3s ease-in-out;
 		  -ms-transition: all 0.3s ease-in-out;
 		  -o-transition: all 0.3s ease-in-out;
 		  transition: all 0.3s ease-in-out;
-		  -webkit-transform: scale(1); 
-	    -ms-transform: scale(1); 
-	    -moz-transform: scale(1);
-	    transform: scale(1);
+		  -webkit-transform: scale(0.9); 
+	    -ms-transform: scale(0.9); 
+	    -moz-transform: scale(0.9);
+	    transform: scale(0.9);
 			&:hover{
 				opacity: 1;
-				-webkit-transform: scale(1.1); 
-		    -ms-transform: scale(1.1); 
-		    -moz-transform: scale(1.1);
-		    transform: scale(1.1);
+				-webkit-filter: grayscale(0%);
+				-moz-filter: grayscale(0%);
+				-o-filter: grayscale(0%);
+				-ms-filter: grayscale(0%);
+				filter: grayscale(0%);
+				-webkit-transform: scale(1); 
+		    -ms-transform: scale(1); 
+		    -moz-transform: scale(1);
+		    transform: scale(1);
 			}
 		}
 	}
@@ -350,6 +359,60 @@ section {
 	}
 }
 
+// Video styles
+
+.homepage-hero-module {
+	border-right: none;
+	border-left: none;
+	position: relative;
+	-webkit-filter: url(#monochrome);
+  		filter:  url(#monochrome);
+}
+.video-container {
+	position: relative;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	background: #000;
+	.filter {
+		z-index: 100;
+		position: absolute;
+		background: rgba(0, 0, 0, 0.4);
+		width: 100%;
+	}
+	video {
+		position: absolute;
+		z-index: 0;
+		bottom: 0;
+		&.fillWidth {
+			width: 100%;
+		}
+	}
+	.poster img {
+		width: 100%;
+		bottom: 0;
+		position: absolute;
+	}
+}
+.no-video .video-container {
+	video {
+		display: none;
+	}
+	.poster {
+		display: block !important;
+	}
+}
+.touch .video-container {
+	video {
+		display: none;
+	}
+	.poster {
+		display: block !important;
+	}
+}
+
 footer{
 	background-color: $ka-5;
 	padding: rem-calc(15) 0 0 0;
@@ -371,7 +434,7 @@ footer{
 	  overflow: hidden;
 	  text-indent: 100%;
 	  white-space: nowrap;
-	  background: rgba(25, 52, 65, 0.8) url(/img/cd-top-arrow.svg) no-repeat center 50%;
+	  background: rgba(25, 52, 65, 0.8) url('../img/cd-top-arrow.svg') no-repeat center 50%;
 	  visibility: hidden;
 	  opacity: 0;
 	  -webkit-transition: opacity .3s 0s, visibility 0s .3s;
