--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -121,6 +121,10 @@ section {
 					
 				}
 			}
+			div.row.collapse{
+				margin-left: 0 !important;
+				margin-right: 0 !important;
+			}
 		}
 		article{
 			max-width: $global-width;
@@ -168,16 +172,56 @@ section {
 				  position: relative;
 				  max-width: 0;
 				  max-height: 0;
-				  left: -10px;
-				  top: 0;
+				  left: rem-calc(-10);
+				  top: rem-calc(-5);
 				  color: $ka-4;
 				  font-size: rem-calc(30);
 				  vertical-align: middle;
 				}
 			}
 		}
+		h2{
+			font-size: rem-calc(18);
+			font-weight: bold;
+			letter-spacing: 2px;
+			text-align: center;
+		}
+		h4{
+			margin-bottom: rem-calc(10);
+		}
+		h4, a{
+			font-size: rem-calc(16);
+			font-weight: bold;
+			font-family: 'montserratlight';
+			text-align: center;
+			display: block;
+		}
+		img{
+			max-width: rem-calc(150);
+			margin: rem-calc(10) 0;
+			-webkit-transition: all 0.3s ease-in-out;
+		  -moz-transition: all 0.3s ease-in-out;
+		  -ms-transition: all 0.3s ease-in-out;
+		  -o-transition: all 0.3s ease-in-out;
+		  transition: all 0.3s ease-in-out;
+			&:hover{
+			  -webkit-transform: scale(0.9); 
+		    -ms-transform: scale(0.9); 
+		    -moz-transform: scale(0.9);
+		    transform: scale(0.9);
+			}
+		}
 		.linkedin{
 			text-align: center;
+		}
+		.download{
+			background-color: $ka-4;
+			color: $white;
+			border: 2px solid $ka-4;
+			&:hover{
+				background-color: $white;
+				color: $ka-4;
+			}
 		}
 	}
 	&.skills{
@@ -193,7 +237,7 @@ section {
 				  max-height: 0;
 				  margin-left: rem-calc(10);
 				  left: rem-calc(-10);
-				  top: 0;
+				  top: rem-calc(-5);
 				  color: $ka-3;
 				  font-size: rem-calc(30);
 				  vertical-align: middle;
@@ -202,6 +246,7 @@ section {
 		}
 	}
 	&.education{
+		text-align: center;
 		article{
 			padding-top: rem-calc(15);
 			padding-bottom: rem-calc(15);
@@ -210,6 +255,35 @@ section {
 				height: rem-calc(180);
 				margin-left: auto;
 				margin-right: auto;
+				img{
+					opacity: 0.5;
+					-webkit-filter: grayscale(100%);
+					-moz-filter: grayscale(100%);
+					-o-filter: grayscale(100%);
+					-ms-filter: grayscale(100%);
+					filter: grayscale(100%);
+					-webkit-transition: all 0.3s ease-in-out;
+				  -moz-transition: all 0.3s ease-in-out;
+				  -ms-transition: all 0.3s ease-in-out;
+				  -o-transition: all 0.3s ease-in-out;
+				  transition: all 0.3s ease-in-out;
+				  -webkit-transform: scale(0.9); 
+			    -ms-transform: scale(0.9); 
+			    -moz-transform: scale(0.9);
+			    transform: scale(0.9);
+					&:hover{
+						opacity: 1;
+						-webkit-filter: grayscale(0%);
+						-moz-filter: grayscale(0%);
+						-o-filter: grayscale(0%);
+						-ms-filter: grayscale(0%);
+						filter: grayscale(0%);
+						-webkit-transform: scale(1); 
+				    -ms-transform: scale(1); 
+				    -moz-transform: scale(1);
+				    transform: scale(1);
+					}
+				}
 			}
 		}
 	}
@@ -242,6 +316,13 @@ section {
 	}
 	&.portfolio{
 		margin-bottom: rem-calc(17);
+		a{
+			color: $ka-5;
+			font-weight: bold;
+			&:hover{
+				color: $ka-3;
+			}
+		}
 		img{
 			opacity: 0.5;
 			-webkit-filter: grayscale(100%);
@@ -270,6 +351,26 @@ section {
 		    -moz-transform: scale(1);
 		    transform: scale(1);
 			}
+			&.app{
+				opacity: 0.75;
+				-webkit-filter: grayscale(10%);
+				-moz-filter: grayscale(10%);
+				-o-filter: grayscale(10%);
+				-ms-filter: grayscale(10%);
+				filter: grayscale(10%);
+				&:hover{
+					opacity: 1;
+				}
+			}
+			&.crystal{
+				opacity: 1;
+			}
+		}
+		h2{
+			font-size: rem-calc(18);
+			font-weight: bold;
+			letter-spacing: 2px;
+			text-align: center;
 		}
 	}
 	&.contact{
@@ -379,7 +480,7 @@ section {
 		z-index: 100;
 		position: absolute;
 		background: rgba(0, 0, 0, 0.4);
-		width: 100%;
+		height: 100%;
 	}
 	video {
 		position: absolute;
