--- a/F6-resume-02-2016/scss/_fonts.scss
+++ b/F6-resume-02-2016/scss/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'montserratultra_light';
-    src: url('fonts/montserrat-ultralight.woff2') format('woff2'),
-         url('fonts/montserrat-ultralight.woff') format('woff'),
-         url('fonts/montserrat-ultralight.ttf') format('truetype');
+    src: url('fonts/Montserrat-UltraLight.woff2') format('woff2'),
+         url('fonts/Montserrat-UltraLight.woff') format('woff'),
+         url('fonts/Montserrat-UltraLight.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -10,9 +10,9 @@
 
 @font-face {
     font-family: 'montserratsemi_bold';
-    src: url('fonts/montserrat-semibold.woff2') format('woff2'),
-         url('fonts/montserrat-semibold.woff') format('woff'),
-         url('fonts/montserrat-semibold.ttf') format('truetype');
+    src: url('fonts/Montserrat-SemiBold.woff2') format('woff2'),
+         url('fonts/Montserrat-SemiBold.woff') format('woff'),
+         url('fonts/Montserrat-SemiBold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -20,9 +20,9 @@
 
 @font-face {
     font-family: 'montserratregular';
-    src: url('fonts/montserrat-regular.woff2') format('woff2'),
-         url('fonts/montserrat-regular.woff') format('woff'),
-         url('fonts/montserrat-regular.ttf') format('truetype');
+    src: url('fonts/Montserrat-Regular.woff2') format('woff2'),
+         url('fonts/Montserrat-Regular.woff') format('woff'),
+         url('fonts/Montserrat-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -30,9 +30,9 @@
 
 @font-face {
     font-family: 'montserratlight';
-    src: url('fonts/montserrat-light.woff2') format('woff2'),
-         url('fonts/montserrat-light.woff') format('woff'),
-         url('fonts/montserrat-light.ttf') format('truetype');
+    src: url('fonts/Montserrat-Light.woff2') format('woff2'),
+         url('fonts/Montserrat-Light.woff') format('woff'),
+         url('fonts/Montserrat-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -40,9 +40,9 @@
 
 @font-face {
     font-family: 'montserrathairline';
-    src: url('fonts/montserrat-hairline.woff2') format('woff2'),
-         url('fonts/montserrat-hairline.woff') format('woff'),
-         url('fonts/montserrat-hairline.ttf') format('truetype');
+    src: url('fonts/Montserrat-Hairline.woff2') format('woff2'),
+         url('fonts/Montserrat-Hairline.woff') format('woff'),
+         url('fonts/Montserrat-Hairline.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -50,9 +50,9 @@
 
 @font-face {
     font-family: 'montserratextra_bold';
-    src: url('fonts/montserrat-extrabold.woff2') format('woff2'),
-         url('fonts/montserrat-extrabold.woff') format('woff'),
-         url('fonts/montserrat-extrabold.ttf') format('truetype');
+    src: url('fonts/Montserrat-ExtraBold.woff2') format('woff2'),
+         url('fonts/Montserrat-ExtraBold.woff') format('woff'),
+         url('fonts/Montserrat-ExtraBold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -60,9 +60,9 @@
 
 @font-face {
     font-family: 'montserratbold';
-    src: url('fonts/montserrat-bold.woff2') format('woff2'),
-         url('fonts/montserrat-bold.woff') format('woff'),
-         url('fonts/montserrat-bold.ttf') format('truetype');
+    src: url('fonts/Montserrat-Bold.woff2') format('woff2'),
+         url('fonts/Montserrat-Bold.woff') format('woff'),
+         url('fonts/Montserrat-Bold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -70,9 +70,9 @@
 
 @font-face {
     font-family: 'montserratblack';
-    src: url('fonts/montserrat-black.woff2') format('woff2'),
-         url('fonts/montserrat-black.woff') format('woff'),
-         url('fonts/montserrat-black.ttf') format('truetype');
+    src: url('fonts/Montserrat-Black.woff2') format('woff2'),
+         url('fonts/Montserrat-Black.woff') format('woff'),
+         url('fonts/Montserrat-Black.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
