--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -447,6 +447,13 @@ section {
 					float: right;
 				}
 			}
+			p.success{
+				color: $ka-4;
+				font: {
+					weight: bold;
+					size: rem-calc(18);
+				} 
+			}
 		}
 		input, textarea{
 			background-color: transparent;
