--- a/sara_junio_16/scss/_styles.scss
+++ b/sara_junio_16/scss/_styles.scss
@@ -11,6 +11,11 @@
   src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzKRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
 }
 
+html {
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
 body {
   max-width: 100%;
   width: 100%;
@@ -58,14 +63,14 @@ h2, {
     font-size: 120%;
   }
   .arrow {
-    width: 0;
     left: 50%;
     bottom: 0;
     position: fixed;
-    margin-left: -40px;
+    margin-left: -15px;
     border-right: 5px solid $medium-gray;
     border-bottom: 5px solid $medium-gray;
-    width: 30px; height: 30px;
+    width: 30px; 
+    height: 30px;
     transform: rotate(42.5deg);
     animation: indicate 3s 3 forwards;
   }
@@ -105,6 +110,27 @@ section{
       &:hover{
         background-color: #2199e8;
       }
+    }
+    .message{
+      font-style: italic;
+      &.success{
+        color: #4F8A10;
+      }
+      &.error {
+        color: $alert-color;
+      }
+    }
+    label{
+      span{
+        color: $alert-color;
+      }
+    }
+    textarea{
+      min-height: rem-calc(200);
+    }
+    input.button.submit{
+      float: right;
+      display: none;
     }
   }
 }
@@ -161,12 +187,35 @@ footer {
     right: 0;
     button{
       width: 100%;
+      height: rem-calc(64);
+      background-color: rgba(255,255,255,0.8);
+      background-image: url('../img/menu-A.png');
+      background-repeat: no-repeat;
+      &:hover, &:active, &:focus{
+        background-color: rgba(255,255,255,0.8);
+      }
+    }
+  }
+  .menu.vertical{
+    >li{
+      padding: rem-calc(14);
+      border-top: 1px solid $dark-gray;
+      //border-bottom: 1px solid $dark-gray;
+      &:last-of-type{
+        border-bottom: 1px solid $dark-gray;
+      }
+    }
+  }
+  .off-canvas-wrapper{
+    background-color: $medium-gray;
+    .is-open{
+      background-color: $light-gray;
     }
   }
   .heading{
     //padding-top: 0;
     .arrow {
-      margin-left: 0;
+      margin-left: rem-calc(-15);
     }
   }
   .nav-menu{
