--- a/sara_junio_16/scss/_styles.scss
+++ b/sara_junio_16/scss/_styles.scss
@@ -181,19 +181,25 @@ footer {
 
 @include breakpoint(small only) {
   .mobile-nav{
-    height: rem-calc(44);
+    background-color: rgba(255,255,255,0.8);
+    height: rem-calc(70);
     position: fixed;
     left: 0;
     right: 0;
     button{
       width: 100%;
-      height: rem-calc(64);
-      background-color: rgba(255,255,255,0.8);
+      height: rem-calc(44);
+      margin-bottom: 0;
+      background-color: transparent;
       background-image: url('../img/menu-A.png');
       background-repeat: no-repeat;
       &:hover, &:active, &:focus{
-        background-color: rgba(255,255,255,0.8);
+        background-color: transparent;
       }
+    }
+    span{
+      padding-left: rem-calc(5);
+      font-size: rem-calc(12);
     }
   }
   .menu.vertical{
