Updated mikerai's resume

--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -150,7 +150,7 @@ section {
 		  height: 100vh;
 		  top: 0;
 		  bottom: 0;
-		  background: url('../img/hero-banner.jpg') 50% 0 no-repeat;
+		  background: url('../img/hero-banner-2.jpg') 50% 0 no-repeat;
 		  background-size: cover;
 		  opacity: 1;
 		}
