--- a/F6-resume-02-2016/scss/_settings.scss
+++ b/F6-resume-02-2016/scss/_settings.scss
@@ -52,6 +52,7 @@ $ka-1: #FCFFF5; //white
 $ka-2: #D1DBBD; //pearl
 $ka-3: #91AA9D; //silk green
 $ka-4: #3E606F; //steel green-blue-gray
+$ka-4-trans: rgba(62,96,111,0.6);
 $ka-5: #193441; //sober blue
 $red: #BF2C37;
 $yellow: #FFE200;
