--- a/F6-resume-02-2016/scss/_header.scss
+++ b/F6-resume-02-2016/scss/_header.scss
@@ -74,7 +74,7 @@
 			text-transform: uppercase;
 			letter-spacing: 2px;
 			font:{
-				family: -apple-system, 'montserratlight', Helvetica, Arial, sans-serif;
+				family: 'adam.cg_proregular', -apple-system, Helvetica, Arial, sans-serif;
 				weight: normal;
 				size: rem-calc(17);
 			}
